# COMS-Console

./: .gitignore  CONTRIBUTE.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task_create.md
.github/workflows/: build-api-docs.yml  main.yml  pi.yml  publish-api-docs  publish-api-docs.yml  rust.yml
Hardware Subteam Stuff/: Duck Head.SLDPRT  Hardware Design Component Tracker.xlsx
backend/src/: game.py  game_endpoints.py  launcher.py
data/: games.json
dev-client-test/: Cargo.toml
dev-client-test/src/: main.rs
docs/quackbox/: package-lock.json  package.json
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js  index.css
frontend/src/components/: FilterModal.js  GameGallery.js  GameInfoCard.css  GameInfoCard.js  GameInfoModal.js  GameSearch.js  GameSearchOverlay.js  GameThumbnail.js  Navigation.js  SearchModal.js
frontend/src/data/: games.json
just-noodling-around/dev-client-test/: Cargo.toml
quackbox-api-docs/: README  asyncapi-v1.yaml  asyncapi-v2-ws.yaml  asyncapi-v2.yaml  openapi-v1.yaml  openapi-v2.yaml  package-lock.json  package.json  zudoku.config.mjs
quackbox-api-docs/apis/: openapi-v1.yaml  openapi-v2.yaml
quackbox-api-docs/docs/: asyncapi.md  index.html
quackbox-api-docs/docs-v1/: index.html
quackbox-api-docs/docs-v2/: index.html
quackbox-api-docs/site/: index.html  index.js
src/: App.jsx  README.md  index.css  index.jsx
src-tauri/: .gitignore  Cargo.toml  backend-api.md  diesel.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2025-02-21-043342_create_leaderboard/: down.sql  up.sql
src-tauri/migrations/2025-02-21-211725_create_users/: up.sql
src-tauri/migrations/2025-02-21-211832_create_saves/: down.sql  up.sql
src-tauri/migrations/2025-02-21-213304_create_games/: up.sql
src-tauri/src/: game_dev_api.rs  lib.rs  main.rs
src-tauri/src/db/: README.md  mod.rs  models.rs  schema.rs  test_context.rs
src-tauri/src/frontend_api/: games.rs  mod.rs
src-tauri/src/game_dev_api/: api.rs  handlers.rs  hello_axum.rs  mod.rs  v1_handlers.rs  v2_handlers.rs
src-tauri/src/gamepad_manager/: gamepad_manager.rs  gamepad_manager_notifier.rs  gamepad_state.rs  mod.rs
src-tauri/tests/: client.rs  integration_tests.rs  test_context.rs  v2_api_tests.rs
src-tauri/tests/test_context/: mod.rs
src/backend/: game.py  game_endpoints.py  launcher.py
src/components/: Bubble.jsx  FilterModal.jsx  Footer.jsx  GameGallery.jsx  GameInfoModal.jsx  GameSearch.jsx  GameThumbnail.jsx  Navigation.jsx  SearchModal.jsx
src/context/: ControllerContext.jsx  GamepadContext.jsx  Keybinds.md  NavigationContext.jsx  PageContext.jsx  ToastContext.jsx  contexts.jsx
src/data/: games.json
src/helpers/: CurrentButton.jsx  SortGames.jsx
src/hooks/: useModal.ts
src/pages/: ControllerConnectPage.jsx  HomePage.jsx
src/styles/: ControllerConnect.css  FilterModal.css  Footer.css  GameGallery.css  GameInfoModal.css  HomePage.css  Navigation.css  SearchModal.css
(+33 files in other folders)
