[package]
name = "quackbox-backend"
version = "1.0.0"
description = "A quacking awesome backend for the QuackBox"
authors = ["Sean O'Donnell<sao3216@rit.edu>", "Matt Chen<mlc7959@rit.edu>"]
license = "MIT"
repository = "https://github.com/rit-coms/COMS-Console"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0.128"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [ "protocol-asset"] }
chrono = { version = "0.4.31", features = ["serde"] }
anyhow = "1.0.89"
url = "2.5.2"
tauri-plugin-autostart = { version = "2" }
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
# build libsqlite3 as part of the build process
# uncomment this line if you run into setup issues
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
uuid = "1.11.0"
tokio = { version = "1.29.1", features = ["full"] }
axum = "0.8.1"
serde_with = "3.0.0"
tower = "0.5.2"
http-body-util = "0.1.2"
axum-macros = "0.3.8"
diesel_migrations = "2.0.0"
axum-test = "17.2.0"
regex = "1.9.6"
tauri-plugin-process = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
quackbox-raspi = ["autostart"]
autostart = []
